# whip-camera

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
http/: WhipClient.cpp  WhipClient.h
